--- a/scss/_floating-action-button.scss
+++ b/scss/_floating-action-button.scss
@@ -35,6 +35,12 @@
 }
 
 }
+
+// Hide all buttons
+.view-action:not(.page-header-button) {
+    display: none;
+}
+
 // --------------
 /* Floating Action Button (FAB)*/
 // Custom page header mode DISABLED
